--- a/src/Lesson9/shapesV2/ShapeMaker.form
+++ b/src/Lesson9/shapesV2/ShapeMaker.form
@@ -183,7 +183,7 @@
     <Component class="javax.swing.JButton" name="resizebtn">
       <Properties>
         <Property name="background" type="java.awt.Color" editor="org.netbeans.beaninfo.editors.ColorEditor">
-          <Color blue="0" green="99" red="cc" type="rgb"/>
+          <Color blue="33" green="99" red="ff" type="rgb"/>
         </Property>
         <Property name="text" type="java.lang.String" value="RESIZE"/>
       </Properties>
